# Proyecto

./: CMakeLists.txt  README.md  random.awk
include/: afd.hpp  args.hpp  dfa.hpp  matrix.hpp  nfa.hpp
pkg/arch/: PKGBUILD
pkg/ubuntu/: CMakeLists.txt
src/: CMakeLists.txt  afd.cpp  args.cpp  dfa.cpp  main.cpp  matrix.cpp  nfa.cpp
